update asset uploader

--- a/app/config/price.yml
+++ b/app/config/price.yml
@@ -11,3 +11,10 @@ services:
         class: AppBundle\Price\PriceWithoutTaxCalculator
         tags:
             - { name: price_calculator }
+
+    app.price.price_calculator_subscriber:
+        class: AppBundle\Price\PriceCalculatorSubscriber
+        arguments:
+            - '@app.price.price_factory'
+        tags:
+            - { name: doctrine.event_subscriber }
