--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -110,11 +110,11 @@ api_platform:
     # Enable the FOSUserBundle integration.
     enable_fos_user: false
     # Enable the Nelmio Api doc integration.
-    enable_nelmio_api_doc: false
+    enable_nelmio_api_doc: true
     # Enable the Swagger documentation and export.
-    enable_swagger: true
+    enable_swagger: false
     # Enable Swagger ui.
-    enable_swagger_ui: true
+    enable_swagger_ui: false
 
     collection:
         # The default order of results.
@@ -162,3 +162,12 @@ api_platform:
         jsonld:
             mime_types: ['application/ld+json']
 
+nelmio_api_doc:
+    sandbox:
+        accept_type:        'application/json'
+        body_format:
+            formats:        ['json']
+            default_format: 'json'
+        request_format:
+            formats:
+                json:       'application/json'
