--- a/app/config/asset_owner.yml
+++ b/app/config/asset_owner.yml
@@ -2,4 +2,4 @@ services:
     app.asset_owner.diamond:
         class: AppBundle\Entity\Diamond
         tags:
-            - { name: asset_owner }
+            - { name: 'asset_owner' }
