--- a/app/config/promotion.yml
+++ b/app/config/promotion.yml
@@ -1,8 +1,18 @@
 services:
     app.promotion.repository:
-        class: AppBundle\Promotion\PromotionRepository
+        class: AppBundle\Repositroy\PromotionRepository
         arguments:
             - '@doctrine.orm.entity_manager'
             - ''
         calls:
             - [setContainer, ['@service_container']]
+
+    app.promotion.promotion_factory:
+        class: AppBundle\Promotion\PromotionFactory
+        arguments:
+            - '@app.promotion.repository'
+
+    app.promotion.twenty_percent_discount:
+        class: AppBundle\Promotion\TwentyPercentDiscountPromotion
+        tags:
+            - { name: 'promotion' }
