--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "dunglas/action-bundle": "^0.3",
         "nelmio/cors-bundle": "^1.4",
         "phpdocumentor/reflection-docblock": "^3.0",
-        "knplabs/doctrine-behaviors": "~1.1"
+        "knplabs/doctrine-behaviors": "~1.1",
+        "nelmio/api-doc-bundle": "~2.9"
     },
     "require-dev": {
         "api-platform/schema-generator": "^1.2",
