--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: asset.yml }
     - { resource: parameters.yml }
     - { resource: price.yml }
+    - { resource: product.yml }
     - { resource: promotion.yml}
     - { resource: security.yml }
     - { resource: services.yml }
