--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: shopping_cart.yml }
+    - { resource: transaction.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
