--- a/app/config/shopping_cart.yml
+++ b/app/config/shopping_cart.yml
@@ -22,3 +22,11 @@ services:
             - '@app.shopping_cart.shopping_cart_item_repository'
         tags:
             - { name: 'doctrine.event_subscriber' }
+
+    app.shopping_cart.shopping_cart_item_subscriber:
+        class: AppBundle\ShoppingCart\ShoppingCartItemSubscriber
+        arguments:
+            - '@app.shopping_cart.shopping_cart_item_repository'
+            - '@app.product.product_factory'
+        tags:
+            - { name: 'doctrine.event_subscriber' }
